# DLA

./: .gitignore  README.txt
documentation/: DIGLSInDepth.tex  DIGLSOverview.tex  SelfArx.cls  UserGuideArx.cls  userguide.tex
include/: types.h
objectModel/: CMakeLists.txt  Makefile  README.txt
objectModel/include/: types.h  utilities.h  visualizer.h
objectModel/paper/: DLA.tex
objectModel/src/: simulation.cpp  types.cpp  utilities.cpp  visualizer.cpp
objectModel/tests/: testTypes.h  testUtilities.h  tests.cpp
paper/: DLA.tex
src/: simulation.cpp  types.cpp  visualizer.cpp
tests/: testUtilities.cpp  unitTests.cpp
visualizer/: visualizer.cpp  visualizer.h
